Feature: Adicionando jogabilidade e Placar no footer

--- a/src/Component/gameSquare/_gameSquare.sass
+++ b/src/Component/gameSquare/_gameSquare.sass
@@ -1,7 +1,7 @@
 #firstDivGameSquare 
   background-color: #fff
   height: 20rem
-  width: 50%
+  width: 35vw
 
   .tdGameS
     align-self: center
@@ -44,7 +44,7 @@
   align-items: center
   display: flex
   height: 80%
-  margin: 8%
-  font-size: 5rem
+  margin: -8% 8% 3% 8%
+  font-size: 4rem
   justify-content: center
   width: 80%
