--- a/src/style/_app.sass
+++ b/src/style/_app.sass
@@ -29,7 +29,6 @@
   .lineDivisoryFooter
     border: 0.15rem solid blue
     border-radius: 1rem 1rem 0 0
-    margin-bottom: 2rem
     width: 60%
 
   #bodyGame
@@ -42,6 +41,6 @@
   #footerGame
     border: 1px solid gold
     display: flex
-    justify-content: center
+    gap: 1rem
     height: 15%
     width: 70%
