Feature: adicionando funcionalidade de Reset com modal

--- a/src/Component/FooterGame/_footerGame.sass
+++ b/src/Component/FooterGame/_footerGame.sass
@@ -17,11 +17,15 @@
     // color: #08b53a
 
   .placarFooter
-    // border: 1px solid red
+    border: 1px solid red
     display: flex
+    height: 4vh
     justify-content: space-around
     margin: 0.5rem
     width: 60vw
+
+  .placarFooter div
+    color: #000
 
   .buttonFooter
     display: flex
