--- a/src/Component/gameSquare/_gameSquare.sass
+++ b/src/Component/gameSquare/_gameSquare.sass
@@ -1,5 +1,5 @@
 #firstDivGameSquare 
-  background-color: #fff
+  background-color: #1b2082
   height: 20rem
   width: 35vw
 
@@ -9,16 +9,19 @@
     height: 33%
     width: 33%
 
+  .tdGameS.winning
+    background-color: #ffee0073
+
   .square5
-    border: 0.5rem solid #000
+    border: 0.5rem solid #fff
 
   .square28
-    border-left: 0.5rem solid #000
-    border-right: 0.5rem solid #000
+    border-left: 0.5rem solid #fff
+    border-right: 0.5rem solid #fff
 
   .square46
-    border-top: 0.5rem solid #000
-    border-bottom: 0.5rem solid #000
+    border-top: 0.5rem solid #fff
+    border-bottom: 0.5rem solid #fff
 
 .firstDivGameSquareH1
   align-content: center
