Feature: adicionando background-image

--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,9 @@ table {
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #646cff;
+  background-image: url('./images/backgroundVS.webp');
+  background-repeat: no-repeat;
+  background-size: cover;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
