--- a/src/Component/gameSquare/_gameSquare.sass
+++ b/src/Component/gameSquare/_gameSquare.sass
@@ -1,5 +1,5 @@
 #firstDivGameSquare 
-  background-color: #1b2082
+  background-color: transparent
   height: 20rem
   width: 35vw
 
@@ -10,18 +10,18 @@
     width: 33%
 
   .tdGameS.winning
-    background-color: #ffee0073
+    background-color: rgb(255, 238, 0, 0.8)
 
   .square5
-    border: 0.5rem solid #fff
+    border: 0.5rem solid #000
 
   .square28
-    border-left: 0.5rem solid #fff
-    border-right: 0.5rem solid #fff
+    border-left: 0.5rem solid #000
+    border-right: 0.5rem solid #000
 
   .square46
-    border-top: 0.5rem solid #fff
-    border-bottom: 0.5rem solid #fff
+    border-top: 0.5rem solid #000
+    border-bottom: 0.5rem solid #000
 
 .firstDivGameSquareH1
   align-content: center
