--- a/src/style/_app.sass
+++ b/src/style/_app.sass
@@ -2,11 +2,10 @@
   align-content: center
   align-items: center
   align-self: center
-  background-color: #daeaff4b
   display: flex
   justify-content: center
   flex-direction: column
-  margin: 5%
+  margin: 1% 0 0 5%
   height: 90%
   width: 90%
 
@@ -21,13 +20,13 @@
     width: 70%
 
   .lineDivisory
-    border: 0.15rem solid blue
+    border: 0.15rem solid #f0f0f0
     border-radius: 0 0 1rem 1rem
     margin-bottom: 2rem
     width: 60%
 
   .lineDivisoryFooter
-    border: 0.15rem solid blue
+    border: 0.15rem solid #f0f0f0
     border-radius: 1rem 1rem 0 0
     width: 60%
 
@@ -39,7 +38,6 @@
     width: 70%
 
   #footerGame
-    border: 1px solid gold
     display: flex
     gap: 1rem
     height: 15%
