Feature: Adicionando footerGame.sass

--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ table {
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-image: url('./images/backgroundVS.webp');
+  background-image: url('./images/versus-frame-logo-sinal-de-neon-estilo-neon_77399-1300.avif');
   background-repeat: no-repeat;
   background-size: cover;
 
