--- a/src/Component/FooterGame/_footerGame.sass
+++ b/src/Component/FooterGame/_footerGame.sass
@@ -1,9 +1,10 @@
 #footerDivFirst
   align-content: center
   align-items: center
+  border-radius: 0.5rem 0.5rem 5rem 5rem
   display: flex
   justify-content: center
-  background-color: rgba(255, 153, 0, 0.2)
+  background-color: rgba(255, 251, 0, 0.6)
   color: #000
   display: flex
   height: 18vh
