Feat ajeitando responsividade

--- a/src/Component/FooterGame/_footerGame.sass
+++ b/src/Component/FooterGame/_footerGame.sass
@@ -12,23 +12,28 @@
   width: 100%
 
   .victoryFooter
-    color: #000
-    font-size: 1.3rem
+    color: #ff0000
+    font-size: 4.5vw
+    font-weight: 800
+    margin-bottom: 2vw
     text-align: center
-    // color: #08b53a
 
   .placarFooter
+    border: 1px solid green
     display: flex
     height: 4vh
     justify-content: space-around
-    margin: 0.5rem
-    width: 60vw
+    margin-top: 0.5rem
+    width: 100%
 
   .placarFooter div
+    border: 1px solid blue
     color: #000
 
   .buttonFooter
+    border: 1px solid red
     display: flex
     justify-content: center
     gap: 25%
-    width: 60vw
+    height: 4vh
+    width: 100%
