--- a/src/Component/gameSquare/_gameSquare.sass
+++ b/src/Component/gameSquare/_gameSquare.sass
@@ -1,10 +1,13 @@
 .layingActiveGS
+  align-items: center
   display: flex
+  flex-direction: column
+  justify-content: center
 
 #firstDivGameSquare 
   background-color: transparent
-  height: 20rem
-  width: 35vw
+  height: 30vh
+  width: 50vw
 
   .tdGameS
     align-self: center
