--- a/src/Component/participatingPeople/_participatingPeople.sass
+++ b/src/Component/participatingPeople/_participatingPeople.sass
@@ -1,13 +1,18 @@
 #playersHeader
+  // border: 1px solid green
   align-content: center
   align-items: center
+  border-radius: 5rem 5rem 0.5rem 0.5rem
   display: flex
+  justify-content: center
+  background-color: rgba(255, 251, 0, 0.6)
+  color: #000
+  display: flex
+  height: 18vh
   justify-content: space-between
-  flex-direction: row
-  padding-top: 1rem
+  width: 100%
 
-  .divPlayer1,
-  .divPlayer2
+  .divPlayer1
     align-content: center
     align-items: center
     display: flex
@@ -15,6 +20,34 @@
     justify-content: center
     height: 100%
     margin-left: 1rem 
-    text-justify: auto
+    text-align: justify
     text-transform: capitalize
     width: 43%
+
+  .divPlayer2
+    align-items: center
+    display: flex
+    gap: 1rem
+    justify-content: center
+    height: 100%
+    // margin-left: 1rem 
+    text-align: justify
+    text-transform: capitalize
+    width: 43%
+
+
+  .divPlayer1 > svg,
+  .divPlayer2 > svg
+    align-self: center
+    height: auto
+    width: 5vw
+    text-align: center
+
+  #input-with-sx1,
+  #input-with-sx2
+    color: #fff
+    font-size: 3vh
+
+  #input-with-sx2
+    // border: 1px solid red
+    text-align: end
