--- a/src/style/_app.sass
+++ b/src/style/_app.sass
@@ -1,4 +1,8 @@
+@use './variables'
+@import './utils/utilies'
+
 #firstDivGame
+  border: 1px solid white
   align-content: center
   align-items: center
   align-self: center
@@ -6,8 +10,10 @@
   justify-content: center
   flex-direction: column
   margin: 1% 0 0 5%
-  height: 90%
-  width: 90%
+  height: 90vh
+  width: 90vw
+  @include small-screen
+    margin: 0
 
   #headerParticipating
     align-content: center
@@ -15,30 +21,26 @@
     display: flex
     justify-content: center
     flex-direction: row
-    min-height: 25%
+    min-height: 15%
     padding-bottom: 0.5rem
-    width: 70%
+    width: 100%
 
-  .lineDivisory
+  .lineDivisory,
+  .lineDivisoryFooter
     border: 0.15rem solid #f0f0f0
     border-radius: 0 0 1rem 1rem
     margin-bottom: 2rem
-    width: 60%
-
-  .lineDivisoryFooter
-    border: 0.15rem solid #f0f0f0
-    border-radius: 1rem 1rem 0 0
-    width: 60%
+    width: 80%
 
   #bodyGame
     display: flex
     justify-content: center
     height: 60%
     padding-bottom: 2rem
-    width: 70%
+    width: 100%
 
   #footerGame
     display: flex
     gap: 1rem
     height: 15%
-    width: 70%
+    width: 100%
