--- a/src/Component/FooterGame/_footerGame.sass
+++ b/src/Component/FooterGame/_footerGame.sass
@@ -19,21 +19,31 @@
     text-align: center
 
   .placarFooter
-    border: 1px solid green
+    // border: 1px solid green
     display: flex
     height: 4vh
     justify-content: space-around
     margin-top: 0.5rem
     width: 100%
+    gap: 3vw
 
   .placarFooter div
-    border: 1px solid blue
+    // border: 1px solid blue
+    width: 25vw
+    font-size: 3vw
+    margin-top: 3vw
     color: #000
 
   .buttonFooter
-    border: 1px solid red
+    // border: 1px solid red
+    align-items: center
     display: flex
+    background: transparent
     justify-content: center
-    gap: 25%
+    gap: 15%
     height: 4vh
     width: 100%
+
+    .buttonNextGame
+      font-size: 3vw
+      height: 6vw
