--- a/src/style/_app.sass
+++ b/src/style/_app.sass
@@ -2,7 +2,7 @@
 @import './utils/utilies'
 
 #firstDivGame
-  border: 1px solid white
+  // border: 1px solid white
   align-content: center
   align-items: center
   align-self: center
