Feat ajeitando responsividade

--- a/src/Component/gameSquare/_gameSquare.sass
+++ b/src/Component/gameSquare/_gameSquare.sass
@@ -32,21 +32,22 @@
 .firstDivGameSquareH1
   align-content: center
   align-items: center
-  background-color: #fff
+  background-color: rgb(255, 255, 255, 0.9)
   display: flex
   justify-content: center
-  height: 20rem
-  width: 50%
+  height: 100%
+  width: 90%
 
   .h1Names
     align-items: center
     display: flex
     justify-content: center
-    color: rgba(46, 16, 16, 0.8)
+    color: rgba(46, 16, 16)
     font-family: cursive
-    font-size: 2rem
+    font-size: 4vh
     height: 50%
     text-align: center
+    width: 70%
 
 .h1XO
   align-content: center
