--- a/src/style/_app.sass
+++ b/src/style/_app.sass
@@ -40,7 +40,9 @@
     width: 100%
 
   #footerGame
+    background-color: rgba(255, 251, 0, 0.6)
+    border-radius: 0.5rem 0.5rem 5rem 5rem
     display: flex
-    gap: 1rem
-    height: 15%
+    // gap: 1rem
+    height: auto
     width: 100%
