--- a/src/utils/_playing.sass
+++ b/src/utils/_playing.sass
@@ -1,2 +1,15 @@
-.pGamerActive
-    font-size: 5vw
+.firstDivGamer
+    margin-top: 5vh
+    text-shadow: 2px 4px 10px black
+
+    .pGamerActive
+        font-size: 7vw
+
+.gamerX
+    color: blue
+    font-weight: 900
+    text-shadow: 5px 10px 5px black
+
+.gamerO
+    color: red
+    font-weight: 900
