--- a/src/Component/FooterGame/_footerGame.sass
+++ b/src/Component/FooterGame/_footerGame.sass
@@ -1,13 +1,12 @@
 #footerDivFirst
   align-content: center
   align-items: center
-  border-radius: 0.5rem 0.5rem 5rem 5rem
   display: flex
   justify-content: center
-  background-color: rgba(255, 251, 0, 0.6)
+  // background-color: rgba(255, 251, 0, 0.6)
   color: #000
   display: flex
-  height: 18vh
+  height: 25vh
   justify-content: baseline
   width: 100%
 
@@ -17,6 +16,10 @@
     font-weight: 800
     margin-bottom: 2vw
     text-align: center
+
+.footerScoreBoard
+  h3
+    font-size: 4vh
 
   .placarFooter
     // border: 1px solid green
