Feat: Boot facil implementado

--- a/src/Pages/PlayingSelector/PlayingSelectorOne/_playingSelectorOne.sass
+++ b/src/Pages/PlayingSelector/PlayingSelectorOne/_playingSelectorOne.sass
@@ -1,5 +1,5 @@
-@use '../../style/variables'
-@import '../../style/utils/utilies'
+@use '../../../style/variables'
+@import '../../../style/utils/utilies'
 
 #firstDivGamePSO
   // border: 1px solid white
