--- a/src/style/variables.sass
+++ b/src/style/variables.sass
@@ -11,6 +11,12 @@ $borderButton: 0.5rem
 
 $tamanhoWhatsapp: 4vh
 
+$sombraPlayers: #ffd9ba
+
+$colorTextPlayer2: #ff0000
+
+$colorTextPlayer1: #004dc0
+
 /* FONTES */
 $FontBrandonRegular: 'brandon-grotesque-regular', sans-serif, monospace
 $FontBrandonBold: 'brandon-grotesque-bold', sans-serif, monospace
