--- a/src/Component/FooterGame/_footerGame.sass
+++ b/src/Component/FooterGame/_footerGame.sass
@@ -18,27 +18,32 @@
     text-align: center
 
 .footerScoreBoard
+  align-items: center
+  display: flex
+  flex-direction: column
+  height: 100%
+  justify-content: center
   h3
     font-size: 4vh
+    text-align: center
 
   .placarFooter
-    // border: 1px solid green
+    align-items: center
     display: flex
     height: 4vh
-    justify-content: space-around
-    margin-top: 0.5rem
-    width: 100%
+    justify-content: center
+    margin-top: 1rem
+    width: 90%
     gap: 3vw
 
   .placarFooter div
-    // border: 1px solid blue
-    width: 25vw
+    color: #000
     font-size: 3vw
     margin-top: 3vw
-    color: #000
+    text-align: center
+    width: 25vw
 
   .buttonFooter
-    // border: 1px solid red
     align-items: center
     display: flex
     background: transparent
