--- a/src/Component/participatingPeople/_participatingPeople.sass
+++ b/src/Component/participatingPeople/_participatingPeople.sass
@@ -1,15 +1,17 @@
+@use '../../style/variables'
+@import '../../style/utils/utilies'
+
+
 #playersHeader
   // border: 1px solid green
-  align-content: center
   align-items: center
   border-radius: 5rem 5rem 0.5rem 0.5rem
-  display: flex
-  justify-content: center
   background-color: rgba(255, 251, 0, 0.6)
   color: #000
   display: flex
-  height: 18vh
+  height: 100%
   justify-content: space-between
+  padding: 0 5% 0 2%
   width: 100%
 
   .divPlayer1
