--- a/src/style/_app.sass
+++ b/src/style/_app.sass
@@ -1,28 +1,23 @@
-@use './variables'
-@import './utils/utilies'
+@use '../style/variables'
+@import '../style/utils/utilies'
 
 #firstDivGame
   // border: 1px solid white
-  // align-content: center
   align-items: center
-  // align-self: center
   display: flex
+  flex-direction: column
   gap: 5rem
+  height: 90vh
   justify-content: center
   margin: 1% 0 0 5%
-  height: 90vh
   width: 90vw
-  align-items: center
-  display: flex
-  justify-content: center
-  flex-direction: column
 
   .linkButAPP
     text-decoration: none
 
     .buttonSelectionApp
-      font-size: 1.5rem
+      font-size: 2rem
 
       svg
-        height: 2rem
-        width: 2rem
+        height: 3.5rem
+        width: 3.5rem
