Fix: Corrigindo style de jogo de 2

--- a/src/Pages/PlayingSelector/_playingSelectorTwo.sass
+++ b/src/Pages/PlayingSelector/_playingSelectorTwo.sass
@@ -2,7 +2,7 @@
 @import '../../style/utils/utilies'
 
 #firstDivGamePST
-  // border: 1px solid white
+  border: 1px solid white
   align-content: center
   align-items: center
   align-self: center
