Fix: Corrigindo style de jogo de 2

--- a/src/Component/gameSquare/_gameSquare.sass
+++ b/src/Component/gameSquare/_gameSquare.sass
@@ -2,6 +2,7 @@
 @import '../../style/utils/utilies'
 
 .layingActiveGS
+  border: 1xp solid green
   align-items: center
   display: flex
   flex-direction: column
