--- a/src/Pages/PlayingSelector/_playingSelectorTwo.sass
+++ b/src/Pages/PlayingSelector/_playingSelectorTwo.sass
@@ -2,7 +2,6 @@
 @import '../../style/utils/utilies'
 
 #firstDivGamePST
-  border: 1px solid white
   align-content: center
   align-items: center
   align-self: center
@@ -39,6 +38,7 @@
     border-radius: 1rem 1rem 0 0
 
   #bodyGamePST
+    align-items: center
     display: flex
     justify-content: center
     height: 60%
