Fix: Corrigindo style de jogo de 2

--- a/src/Component/participatingPeople/_participatingPeople.sass
+++ b/src/Component/participatingPeople/_participatingPeople.sass
@@ -14,7 +14,6 @@
   width: 100%
 
   .divPlayer1
-    align-content: center
     align-items: center
     display: flex
     gap: 1rem
@@ -41,13 +40,14 @@
   .divPlayer2 > svg
     align-self: center
     height: auto
-    width: 5vw
+    width: 7vw
     text-align: center
 
   #input-with-sx1,
   #input-with-sx2
-    color: #fff
     font-size: 3vh
+    background-color: transparent
 
   #input-with-sx2
     text-align: end
+    background-color: transparent
